--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,9 @@ a {
   &:active i {
     transform: scale(1.3);
   }
+  &[disabled] {
+    pointer-events: none
+  }
 }
 
 .circle-bg {
@@ -56,13 +59,20 @@ a {
   top: 50%;
   transform: translateY(-50%);
   #quote-text {
-    opacity: 0;
     padding: 0 20px 10px;
   }
   #quote-author {
-    opacity: 0;
     padding: 0 35px;
   }
+}
+
+.hidden {
+  opacity: 0;
+  transition: opacity 3s, color 0.5s;
+}
+
+.shown {
+  opacity: 1;  
 }
 
 #buttons {
@@ -72,7 +82,7 @@ a {
   a {
     padding: 10px;
     i {
-      opacity: 0;
+      opacity: 1;
       transition: transform .5s;
       &.fa-twitter {
         font-size: 2em;
